--- a/Desktop/app/build.gradle
+++ b/Desktop/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.example.janerubygrissom.project2"
+        applicationId "com.example.janerubygrissom.myapplication"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
