--- a/Desktop/app/src/main/AndroidManifest.xml
+++ b/Desktop/app/src/main/AndroidManifest.xml
@@ -15,29 +15,40 @@
             android:label="Many Shades of Prince"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
-                android:name="android.app.activity_search_view"
-                android:resource="@xml/searchable" />
+                android:name="android.app.default_searchable"
+                android:value=".Seeeeeeearch" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                </intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-
             </intent-filter>
         </activity>
         <!-- <activity android:name=".ShoppingCart" /> -->
 
-        <activity android:name=".Main2Activity"
+        <activity
+            android:name=".Main2Activity"
             android:label="Many Shades of Prince">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ShoppingCart"
             android:label="Your Princes"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Seeeeeeearch">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
 
         </activity>
     </application>
